--- a/src/index.css
+++ b/src/index.css
@@ -345,7 +345,6 @@ ul {
     text-align: center;
     border-radius: 15px;
     width: 250px;
-    list-style: none;
     text-decoration: none;
     box-shadow: var(--body_contrast) 20px;
     top: 15px;
